--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,179 +1,214 @@
 /*basic*/
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 /*main styling*/
-html,body {
-    font-family: Tinos, serif;
-    background: #fff;
-    line-height: 1.7em;
-    color: rgb(106, 72, 52);
+html,
+body {
+  font-family: Tinos, serif;
+  background: #fff;
+  line-height: 1.7em;
+  color: rgb(106, 72, 52);
 }
 
 /*links*/
 a {
-    color:rgb(106, 72, 52);
-    text-decoration: none;
+  color: rgb(106, 72, 52);
+  text-decoration: none;
 }
 
 .primary-img {
-    size: 50%;
-    height: 100%;
-    display: block;
-    margin: auto;
-    width: 70%;
-    float: left;
-    padding: 20px 10px;
+  size: 50%;
+  height: 100%;
+  display: block;
+  margin: auto;
+  width: 70%;
+  float: left;
+  padding: 20px 10px;
 }
 
 .header {
-    padding: 2rem;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
+  padding: 2rem;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
 }
 
 /*navbar*/
 .navbar {
-    background: #e5e1d8;
-    color: #6a4834;
-    overflow: auto;
+  background: #e5e1d8;
+  color: #6a4834;
+  overflow: auto;
 }
 
 .navbar .logo {
-    text-align: center;
-    padding-top: 20px;
+  text-align: center;
+  padding-top: 20px;
 }
 
 .navbar .sub-title {
-    text-align: center;
-    padding-top: 10px;
+  text-align: center;
+  padding-top: 10px;
 }
 
 .navbar ul {
-    list-style: none;
-    text-align: center;
-    float: right;
+  list-style: none;
+  text-align: center;
+  float: right;
+  width: 60%;
+  margin: 0;
+  padding: 20px;
 }
 
 .navbar ul li {
-    text-align: center;
-    float: left;
+  text-align: center;
+  float: left;
 }
 
 .navbar ul li a {
-    display: block;
-    padding: 10px;
-    text-align: center;
+  display: block;
+  padding: 10px;
+  text-align: center;
 }
 
-.navbar li a:hover, .navbar li a.current {
-    background: #6a4834;
-    color: #e5e1d8;
+.navbar li a:hover,
+.navbar li a.current {
+  background: #6a4834;
+  color: #e5e1d8;
 }
 
 /*home-info*/
 .home-info .info-content {
-    float: right;
-    width: 50%;
-    height: 100%;
-    text-align: center;
+  float: right;
+  width: 50%;
+  height: 100%;
+  text-align: center;
+  position: absolute;
 }
 
 h2 {
-    color: #6a4834
+  color: #6a4834;
+  padding: 20px;
 }
 
 .home-info .info-img {
-    float: left;
-    width: 50%;
-    width: 100%;
+  float: left;
+  width: 50%;
+  width: 100%;
 }
 
-
-/*Contact Form*/
+.social-media {
+  bottom: 0;
+}
+/*Contact-Form*/
 
 .text-primary {
-    float: right;
-    margin: 20px;
+  float: right;
+  margin: 20px;
+}
+
+.contact-form {
+  position: static;
 }
 
 .contact-form .form-group {
-    margin-bottom: 20px;
-    margin-top: 40px;
-    float: right;
-    text-align: right;
+  margin-bottom: 20px;
+  margin-top: 40px;
+  float: right;
+  text-align: right;
 }
 
-
-.contact-form input, 
+.contact-form input,
 .contact-form textarea {
-    width: 100%;
-    padding: 10px;
-    border: 1px #ddd solid;
+  width: 100%;
+  padding: 10px;
+  border: 1px #ddd solid;
 }
 
 .contact-form textarea {
-    height: 200px;
+  height: 200px;
 }
 
-.contact-form input:focus, 
+.contact-form input:focus,
 .contact-form textarea:focus {
-    outline: none;
-    border-color: #f7c08a;
+  outline: none;
+  border-color: #f7c08a;
 }
-
 
 .contact-form .l-headding {
-    padding: 15px;
-    margin: 20px;
-
+  padding: 15px;
+  margin: 20px;
 }
 
 .btn {
-    display: inline-block;
-    font-size: 18px;
-    color: #e5e1d8;
-    background: #6a4834;;
-    padding: 10px 20px;
-    border: none;
-    cursor: pointer;
-    font-family: Tinos, serif;
-    margin-bottom: 20px;
-    margin: 20px;
+  display: inline-block;
+  font-size: 18px;
+  color: #e5e1d8;
+  background: #6a4834;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  font-family: Tinos, serif;
+  margin-bottom: 20px;
+  margin: 20px;
 }
 
 .btn:hover {
-    background: #e5e1d8;
-    color: #6a4834;
+  background: #e5e1d8;
+  color: #6a4834;
 }
 
-/*social-media-icons*/
+/*social-media*/
+
+.social-media {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+}
+
+.social-media .media-content {
+  text-align: center;
+  justify-content: space-between;
+  bottom: 0;
+  display: flex;
+}
 .media-icons {
-    color: #6a4834;
+  color: #6a4834;
 }
 
 .clr {
-    clear: both;
+  clear: both;
 }
 
 /*store*/
-.title-macrme {
-    padding: 20px;
-    text-align: center;
-    float: ;
-
+.title-dreamcatchers {
+  padding: 20px;
+  text-align: center;
+  color: #6a4834;
 }
 
 /*Footer*/
 .main-footer {
-    text-align: center;
-    padding: 20px;
+  text-align: center;
+  padding: 20px;
+  position: fixed;
+  display: block;
+  background: #6a4834;
+  color: #e5e1d8;
+  width: 100%;
+  padding: 20px;
+  bottom: 0;
 }
 
 .main-footer .p {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
+/* 
+@media screen and (max-width: 700px) {
+  .navbar {
+    background: blue;
+  }
+} */
